<resources>
    <string name="app_name">AfriQuiz</string>

    <!-- Content Description de los Image View -->
    <string name="iconContent">Icono de aplicación</string>
    <string name="backContent">Imagen de botón retroceso</string>

    <!--Strings pantalla de inicio -->
    <string name="textInitScreen">Inicio de Sesión</string>
    <string name="emailHint">Email:</string>
    <string name="passHint">Contraseña:</string>
    <string name="rememberHint">Recuerdame:</string>
    <string name="textButtonLogIn">Iniciar Sesión</string>
    <string name="textButtonSignIn1">¿No estás registrado?</string>

    <!-- Strings pantalla de registro -->
    <string name="textConfPassword">Confirmar Contraseña:</string>
    <string name="textSignInScreen">Registro de Usuario</string>
    <string name="textButtonConfirm">Confirmar</string>

    <!-- Strings pantalla de menú -->
    <string name="logOut">Cerrar Sesión</string>
    <string name="textWelcome">¡Bienvenido!</string>
    <string name="selectOption">Seleccione una opción:</string>
    <string name="opt1">Tests</string>
    <string name="opt2">Puntuaciones</string>
    <string name="opt3">Glosario</string>

    <!-- String pantalla glosario -->
    <string name="textTitleGlossary">Glosario de Países</string>

    <!-- String pantalla de selección de test -->
    <string name="textTitleSelectTest">Tests</string>
    <string name="textSubtitleTest">Seleccione la cantidad de preguntas:</string>
    <string name="btStartTest">Comenzar</string>
    <string name="textNumPreguntas">Número de preguntas:</string>

    <!-- String pantalla de test -->
    <string name="textQuestionSubtitle">¿Cuál es la capital de…</string>
    <string name="nextQuestion"> >>> </string>

    <!-- String pantalla de test -->
    <string name="testHeader">Tests</string>
    <string name="testSubtitle">Seleccione la cantidad de preguntas:</string>
    <string name="start">Comenzar</string>

    <!-- Strings pantalla de puntuación -->
    <string name="textTitleScore">Resultados</string>
    <string name="textNumAciertos">Número de aciertos:</string>
    <string name="textNumFallos">Número de fallos:</string>
    <string name="textPercentAciertos">Porcentaje de aciertos</string>
    <string name="btVolverMenu">Volver al menú</string>

    <!-- String pantalla de puntuaciones -->
    <string name="textTitlePuntuaciones">Puntuaciones</string>

</resources>