<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MenuActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:alpha="@dimen/material_emphasis_disabled_background"
        android:contentDescription="@string/iconContent"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/mockup_pantalla_inicio_removebg_preview"
        tools:ignore="ImageContrastCheck" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btStart"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/button_initscreen"
        android:fontFamily="@font/nunito_black"
        android:text="@string/opt1"
        android:textSize="19sp"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="@+id/tvSubtitle"
        app:layout_constraintStart_toStartOf="@+id/tvSubtitle"
        app:layout_constraintTop_toBottomOf="@+id/tvSubtitle" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btRanking"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/button_initscreen"
        android:fontFamily="@font/nunito_black"
        android:text="@string/opt2"
        android:textSize="19sp"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="@+id/btStart"
        app:layout_constraintStart_toStartOf="@+id/btStart"
        app:layout_constraintTop_toBottomOf="@+id/btStart" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btGlosary"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/button_initscreen"
        android:fontFamily="@font/nunito_black"
        android:text="@string/opt3"
        android:textSize="19sp"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="@+id/btRanking"
        app:layout_constraintStart_toStartOf="@+id/btRanking"
        app:layout_constraintTop_toBottomOf="@+id/btRanking" />

    <ImageView
        android:id="@+id/ivBackButtonMenu"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/backContent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_lock_power_off"
        app:tint="@color/SelectiveYellow"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/tvLogout"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/nunito_black"
        android:gravity="center_vertical"
        android:text="@string/logOut"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/ivBackButtonMenu"
        app:layout_constraintStart_toEndOf="@+id/ivBackButtonMenu"
        app:layout_constraintTop_toTopOf="@+id/ivBackButtonMenu" />

    <TextView
        android:id="@+id/tvHeader"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/nunito_black"
        android:text="@string/textWelcome"
        android:textAlignment="center"
        android:textColor="@color/RussianViolet"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvLogout" />

    <TextView
        android:id="@+id/tvSubtitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="@font/nunito_bold"
        android:text="@string/selectOption"
        android:textAlignment="center"
        android:textColor="@color/Tekhelet"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/tvHeader"
        app:layout_constraintStart_toStartOf="@+id/tvHeader"
        app:layout_constraintTop_toBottomOf="@+id/tvHeader" />

</androidx.constraintlayout.widget.ConstraintLayout>